# compact

./: README.md  compact.ml  compact.opam  dune  dune-project
HACK/: ocamlc
tests/: dune  test.ml
